# src/database/models/review.js
@@ -1,0 +1,65 @@
+const { DataTypes } = require('sequelize');
+const sequelize = require('../../../config/database');
+const {
+  DB_TABLE_NAMES,
+  getTableNameForMigrations,
+} = require('../constants');
+
+
+const Review = sequelize.define(getTableNameForMigrations(DB_TABLE_NAMES.REVIEW), {
+  id: {
+    type: DataTypes.INTEGER,
+    autoIncrement: true,
+    primaryKey: true,
+    allowNull: false,
+  },
+  userId: {
+    type: DataTypes.INTEGER,
+    allowNull: false,
+  },
+  productId: {
+    type: DataTypes.INTEGER,
+    allowNull: false,
+  },
+  rating: {
+    type: DataTypes.INTEGER,
+    allowNull: false,
+    validate: {
+      min: 1,
+      max: 5,
+    },
+  },
+  comment: {
+    type: DataTypes.TEXT,
+    allowNull: true,
+  },
+  feedbackImagesUrl: {
+    type: DataTypes.ARRAY(DataTypes.STRING),
+    defaultValue: [],
+  },
+  createdAt: {
+    type: DataTypes.DATE,
+    allowNull: false,
+  },
+  updatedAt: {
+    type: DataTypes.DATE,
+    allowNull: false,
+  },
+}, {
+  timestamps: true,
+  underscored: true,
+});
+
+// // One to Many, User và Review
+// User.hasMany(Review, { foreignKey: 'userId', as: 'reviews' });
+// Review.belongsTo(User, { foreignKey: 'userId', as: 'user' });
+//
+// // One to Many, Product và Review
+// Product.hasMany(Review, { foreignKey: 'productId', as: 'reviews' });
+// Review.belongsTo(Product, { foreignKey: 'productId', as: 'product' });
+//
+// // One to One, Review và Product
+// Review.belongsTo(User, { foreignKey: 'userId', as: 'user' });
+// Review.belongsTo(Product, { foreignKey: 'productId', as: 'product' });
+
+module.exports = Review;
